<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Pages">
        <menu>

            <item
                android:id="@+id/nav_login"
                android:icon="@mipmap/ic_launcher"
                android:title="Login" />

            <item
                android:id="@+id/nav_lock_screen"
                android:icon="@mipmap/ic_launcher"
                android:title="Lock Screen" />

            <item
                android:id="@+id/nav_exersice_menus"
                android:icon="@mipmap/ic_launcher"
                android:title="Exercise Menu" />

            <item
                android:id="@+id/nav_text_questions"
                android:icon="@mipmap/ic_launcher"
                android:title="Text Questions" />

            <item
                android:id="@+id/nav_picture_questions"
                android:icon="@mipmap/ic_launcher"
                android:title="Picture Questions" />

            <item
                android:id="@+id/nav_credits"
                android:icon="@mipmap/ic_launcher"
                android:title="Credits" />

            <item
                android:id="@+id/nav_audio_quiz"
                android:icon="@mipmap/ic_launcher"
                android:title="Audio Quiz" />

            <item android:id="@+id/nav_quiz_intro"
                android:icon="@mipmap/ic_launcher"
                android:title="Quiz Introduction" />

            <item android:id="@+id/nav_language_select"
                android:icon="@mipmap/ic_launcher"
                android:title="Select a Language" />

            <item
                android:id="@+id/nav_glossary"
                android:icon="@mipmap/ic_launcher"
                android:title="Glossary" />

            <item
                android:id="@+id/nav_getStarted"
                android:icon="@mipmap/ic_launcher"
                android:title="Get Started" />

            <item android:id="@+id/nav_exercises"
                android:icon="@mipmap/ic_launcher"
                android:title="Exercises" />

            <item android:id="@+id/nav_Video"
                android:icon="@mipmap/ic_launcher"
                android:title="Video Question" />
            <item android:id="@+id/nav_resources"
                android:icon="@mipmap/ic_launcher"
                android:title="Resources" />

            <item android:id="@+id/nav_settings"
                android:icon="@mipmap/ic_launcher"
                android:title="Setting" />

        </menu>
    </item>
</menu>
