...

    <string name="AppID">eAFtucJR0T0NJMexWh7iZWBNi0MBq4OJwSE51TkC</string>
    <string name="ClientID">QErTxyMNBz9nW9I7xpoe2lZu1pi1O3IoxLQdKmVt</string>

    <string name="app_name">Languine</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="text_view_module_title">Module Title</string>
    <string name="text_view_module_description">Placeholder for the desciption of the module</string>

    <string name="button_intro_vid">Intro</string>
...

    <string name="facebook_app_id">1690408691215611</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_credits">Credits</string>
    <string name="credits_text">
        Spanish Grammar and Vocabulary \n\nCopyright \nModern Language Centre\nKing
        \u2019s College London 2016\n\nProject Board:\nInitial stage: Dominique Borel and Catherine
        Brossard\nFinal Stage: Dr. Ana Mar\u00eda Sousa Aguiar de Medeiros and Anette Schroeder
        Rossell\n\nProject manager:\nCecilia Trevino\n\nInstructional Design: Cecilia Trevino
        \n\nContent written by Cecilia Trevino with the help of Diego Iudicissa, Victoria Montesinos
        Gasser and Beatriz Sanitago.\n\nContent development: Cecilia Trevino and Philip Wallace
...
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="multipleChoiceTitle">Multiple choice</string>
    <string name="Question">Question</string>

    <string name="observe">Observe</string>
    <string name="reflect">Reflect</string>
    <string name="experiment">Experiment</string>
    <string name="title_activity_content_audio_quiz">content_audio_quiz</string>
    <string name="title_activity_quiz">Introduction</string>
    <string name="title_activity_review">Review</string>
    <string name="title_activity_language_select">Select a Language</string>
    <string name="title_activity_glossary">Glossary</string>
    <string name="title_activity_media_player">MediaPlayer</string>
...
