<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="email" type="id" />
    <item name="name" type="id" />
</resources>